refactor(#step2): 메뉴 관련 전술적 설계 리팩토링