@@ -1,14 +1,11 @@
 package kitchenpos.menus.application;
 
-import kitchenpos.menus.domain.Menu;
-import kitchenpos.menus.domain.MenuProduct;
-import kitchenpos.menus.domain.MenuRepository;
 import kitchenpos.menus.dto.MenuChangePriceRequest;
 import kitchenpos.menus.dto.MenuCreateRequest;
 import kitchenpos.menus.dto.MenuDetailResponse;
 import kitchenpos.menus.dto.MenuProductElement;
 import kitchenpos.menus.mapper.MenuMapper;
-import kitchenpos.menus.tobe.domain.MenuGroupRepository;
+import kitchenpos.menus.tobe.domain.*;
 import kitchenpos.products.infra.FakePurgomalumClient;
 import kitchenpos.products.infra.PurgomalumClient;
 import kitchenpos.products.tobe.domain.InMemoryProductRepository;
@@ -29,6 +26,7 @@ import java.util.*;
 import static java.util.Objects.isNull;
 import static java.util.stream.Collectors.toUnmodifiableList;
 import static kitchenpos.Fixtures.*;
+import static kitchenpos.menus.tobe.domain.FakeMenu.createFake;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
@@ -39,22 +37,18 @@ class MenuServiceTest {
     private ProductRepository productRepository;
     private PurgomalumClient purgomalumClient;
     private MenuService menuService;
-    private UUID menuGroupId;
+    private MenuGroup menuGroup;
     private Product product;
 
     private static List<Arguments> menuProducts() {
         return Arrays.asList(
                 null,
-                Arguments.of(Collections.emptyList()),
-                Arguments.of(List.of(createMenuProductRequest(INVALID_ID, 2L)))
+                Arguments.of(Collections.emptyList())
         );
     }
 
-    private static MenuProduct createMenuProductRequest(final UUID productId, final long quantity) {
-        final MenuProduct menuProduct = new MenuProduct();
-        menuProduct.setProductId(productId);
-        menuProduct.setQuantity(quantity);
-        return menuProduct;
+    private static MenuProduct createMenuProductRequest(final Product product, final long quantity) {
+        return MenuProduct.create(product, MenuProductQuantity.create(quantity));
     }
 
     @BeforeEach
@@ -64,7 +58,7 @@ class MenuServiceTest {
         productRepository = new InMemoryProductRepository();
         purgomalumClient = new FakePurgomalumClient();
         menuService = new MenuService(menuRepository, menuGroupRepository, productRepository, purgomalumClient);
-        menuGroupId = menuGroupRepository.save(menuGroup()).getId();
+        menuGroup = menuGroupRepository.save(menuGroup());
         product = productRepository.save(product("후라이드", 16_000L));
     }
 
@@ -72,7 +66,7 @@ class MenuServiceTest {
     @Test
     void create() {
         final Menu expected = createMenuRequest(
-                "후라이드+후라이드", 19_000L, menuGroupId, true, createMenuProductRequest(product.getId(), 2L)
+                "후라이드+후라이드", 19_000L, menuGroup, true, createMenuProductRequest(product, 2L)
         );
         MenuDetailResponse actual = menuService.create(new MenuCreateRequest(
                 expected.getName(),
@@ -107,10 +101,18 @@ class MenuServiceTest {
     @MethodSource("menuProducts")
     @ParameterizedTest
     void create(final List<MenuProduct> menuProducts) {
-        final Menu expected = createMenuRequest("후라이드+후라이드", 19_000L, menuGroupId, true, menuProducts);
+        assertThatThrownBy(() -> createMenuRequest("후라이드+후라이드", 19_000L, menuGroup, true, menuProducts))
+                .isInstanceOf(IllegalArgumentException.class);
+    }
+
+    @DisplayName("존재하지 않는 상품이 있으면 등록할 수 없다.")
+    @Test
+    void createNotExistedMenuProducts() {
+        final List<MenuProduct> notExistedProduct = List.of(createMenuProductRequest(product(), 2L));
+        final Menu expected = createMenuRequest("후라이드+후라이드", 19_000L, menuGroup, true, notExistedProduct);
         assertThatThrownBy(() -> menuService.create(new MenuCreateRequest(expected.getName(),
                 expected.getPrice(),
-                expected.getMenuGroupId(),
+                menuGroup.getId(),
                 expected.isDisplayed(),
                 collectMenuProductElements(expected.getMenuProducts()))))
                 .isInstanceOf(IllegalArgumentException.class);
@@ -119,14 +121,7 @@ class MenuServiceTest {
     @DisplayName("메뉴에 속한 상품의 수량은 0개 이상이어야 한다.")
     @Test
     void createNegativeQuantity() {
-        final Menu expected = createMenuRequest(
-                "후라이드+후라이드", 19_000L, menuGroupId, true, createMenuProductRequest(product.getId(), -1L)
-        );
-        assertThatThrownBy(() -> menuService.create(new MenuCreateRequest(expected.getName(),
-                expected.getPrice(),
-                expected.getMenuGroupId(),
-                expected.isDisplayed(),
-                collectMenuProductElements(expected.getMenuProducts()))))
+        assertThatThrownBy(() -> createMenuProductRequest(product, -1L))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -135,28 +130,16 @@ class MenuServiceTest {
     @NullSource
     @ParameterizedTest
     void create(final BigDecimal price) {
-        final Menu expected = createMenuRequest(
-                "후라이드+후라이드", price, menuGroupId, true, createMenuProductRequest(product.getId(), 2L)
-        );
-        assertThatThrownBy(() -> menuService.create(new MenuCreateRequest(expected.getName(),
-                expected.getPrice(),
-                expected.getMenuGroupId(),
-                expected.isDisplayed(),
-                collectMenuProductElements(expected.getMenuProducts()))))
+        assertThatThrownBy(() -> createMenuRequest(
+                "후라이드+후라이드", price, menuGroup, true, createMenuProductRequest(product, 2L)))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("메뉴에 속한 상품 금액의 합은 메뉴의 가격보다 크거나 같아야 한다.")
     @Test
     void createExpensiveMenu() {
-        final Menu expected = createMenuRequest(
-                "후라이드+후라이드", 33_000L, menuGroupId, true, createMenuProductRequest(product.getId(), 2L)
-        );
-        assertThatThrownBy(() -> menuService.create(new MenuCreateRequest(expected.getName(),
-                expected.getPrice(),
-                expected.getMenuGroupId(),
-                expected.isDisplayed(),
-                collectMenuProductElements(expected.getMenuProducts()))))
+        assertThatThrownBy(() -> createMenuRequest(
+                "후라이드+후라이드", 33_000L, menuGroup, true, createMenuProductRequest(product, 2L)))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -165,11 +148,11 @@ class MenuServiceTest {
     @ParameterizedTest
     void create(final UUID menuGroupId) {
         final Menu expected = createMenuRequest(
-                "후라이드+후라이드", 19_000L, menuGroupId, true, createMenuProductRequest(product.getId(), 2L)
+                "후라이드+후라이드", 19_000L, menuGroup, true, createMenuProductRequest(product, 2L)
         );
         assertThatThrownBy(() -> menuService.create(new MenuCreateRequest(expected.getName(),
                 expected.getPrice(),
-                expected.getMenuGroupId(),
+                menuGroupId,
                 expected.isDisplayed(),
                 collectMenuProductElements(expected.getMenuProducts()))))
                 .isInstanceOf(NoSuchElementException.class);
@@ -180,34 +163,28 @@ class MenuServiceTest {
     @NullSource
     @ParameterizedTest
     void create(final String name) {
-        final Menu expected = createMenuRequest(
-                name, 19_000L, menuGroupId, true, createMenuProductRequest(product.getId(), 2L)
-        );
-        assertThatThrownBy(() -> menuService.create(new MenuCreateRequest(expected.getName(),
-                expected.getPrice(),
-                expected.getMenuGroupId(),
-                expected.isDisplayed(),
-                collectMenuProductElements(expected.getMenuProducts()))))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> createMenuRequest(
+                name, 19_000L, menuGroup, true, createMenuProductRequest(product, 2L)
+        )).isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("메뉴의 가격을 변경할 수 있다.")
     @Test
     void changePrice() {
         final UUID menuId = menuRepository.save(menu(19_000L, menuProduct(product, 2L))).getId();
-        final Menu expected = changePriceRequest(16_000L);
-        final MenuDetailResponse actual = menuService.changePrice(menuId, new MenuChangePriceRequest(expected.getPrice()));
-        assertThat(actual.getPrice()).isEqualTo(expected.getPrice());
+        final BigDecimal expected = BigDecimal.valueOf(16_000L);
+        final MenuDetailResponse actual = menuService.changePrice(menuId, new MenuChangePriceRequest(expected));
+        assertThat(actual.getPrice()).isEqualTo(expected);
     }
 
     @DisplayName("메뉴의 가격이 올바르지 않으면 변경할 수 없다.")
     @ValueSource(strings = "-1000")
     @NullSource
     @ParameterizedTest
-    void changePrice(final BigDecimal price) {
+    void changePrice(final BigDecimal expectedPrice) {
         final UUID menuId = menuRepository.save(menu(19_000L, menuProduct(product, 2L))).getId();
-        final Menu expected = changePriceRequest(price);
-        assertThatThrownBy(() -> menuService.changePrice(menuId, new MenuChangePriceRequest(expected.getPrice())))
+
+        assertThatThrownBy(() -> menuService.changePrice(menuId, new MenuChangePriceRequest(expectedPrice)))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -215,8 +192,8 @@ class MenuServiceTest {
     @Test
     void changePriceToExpensive() {
         final UUID menuId = menuRepository.save(menu(19_000L, menuProduct(product, 2L))).getId();
-        final Menu expected = changePriceRequest(33_000L);
-        assertThatThrownBy(() -> menuService.changePrice(menuId, new MenuChangePriceRequest(expected.getPrice())))
+        final BigDecimal expected = BigDecimal.valueOf(33_000L);
+        assertThatThrownBy(() -> menuService.changePrice(menuId, new MenuChangePriceRequest(expected)))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -231,7 +208,14 @@ class MenuServiceTest {
     @DisplayName("메뉴의 가격이 메뉴에 속한 상품 금액의 합보다 높을 경우 메뉴를 노출할 수 없다.")
     @Test
     void displayExpensiveMenu() {
-        final UUID menuId = menuRepository.save(menu(33_000L, false, menuProduct(product, 2L))).getId();
+        final UUID menuId = menuRepository.save(createFake(
+                "치킨 메뉴",
+                purgomalumClient,
+                33_000L,
+                menuGroup,
+                false,
+                List.of(menuProduct(product, 2L))
+        )).getId();
         assertThatThrownBy(() -> menuService.display(menuId))
                 .isInstanceOf(IllegalStateException.class);
     }
@@ -255,56 +239,47 @@ class MenuServiceTest {
     private Menu createMenuRequest(
             final String name,
             final long price,
-            final UUID menuGroupId,
+            final MenuGroup menuGroup,
             final boolean displayed,
             final MenuProduct... menuProducts
     ) {
-        return createMenuRequest(name, BigDecimal.valueOf(price), menuGroupId, displayed, menuProducts);
+        return createMenuRequest(name, BigDecimal.valueOf(price), menuGroup, displayed, menuProducts);
     }
 
     private Menu createMenuRequest(
             final String name,
             final BigDecimal price,
-            final UUID menuGroupId,
+            final MenuGroup menuGroup,
             final boolean displayed,
             final MenuProduct... menuProducts
     ) {
-        return createMenuRequest(name, price, menuGroupId, displayed, Arrays.asList(menuProducts));
+        return createMenuRequest(name, price, menuGroup, displayed, Arrays.asList(menuProducts));
     }
 
     private Menu createMenuRequest(
             final String name,
             final long price,
-            final UUID menuGroupId,
+            final MenuGroup menuGroup,
             final boolean displayed,
             final List<MenuProduct> menuProducts
     ) {
-        return createMenuRequest(name, BigDecimal.valueOf(price), menuGroupId, displayed, menuProducts);
+        return createMenuRequest(name, BigDecimal.valueOf(price), menuGroup, displayed, menuProducts);
     }
 
     private Menu createMenuRequest(
             final String name,
             final BigDecimal price,
-            final UUID menuGroupId,
+            final MenuGroup menuGroup,
             final boolean displayed,
             final List<MenuProduct> menuProducts
     ) {
-        final Menu menu = new Menu();
-        menu.setName(name);
-        menu.setPrice(price);
-        menu.setMenuGroupId(menuGroupId);
-        menu.setDisplayed(displayed);
-        menu.setMenuProducts(menuProducts);
-        return menu;
+        return Menu.create(
+                MenuName.create(name, purgomalumClient),
+                MenuPrice.create(price),
+                menuGroup,
+                MenuDisplay.create(displayed),
+                menuProducts
+        );
     }
 
-    private Menu changePriceRequest(final long price) {
-        return changePriceRequest(BigDecimal.valueOf(price));
-    }
-
-    private Menu changePriceRequest(final BigDecimal price) {
-        final Menu menu = new Menu();
-        menu.setPrice(price);
-        return menu;
-    }
 }
